argocd/media-server/qbittorrent/manifests/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: qbittorrent
  labels:
    istio-injection: disabled
