argocd/media-server/qbittorrent/manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: qbittorrent
  name: qbittorrent
spec:
  ports:
    - name: http
      port: 8080
      targetPort: qbit-webui
  selector:
    app: qbittorrent
