argocd/media-server/qbittorrent/manifests/cross-seed.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cross-seed
  name: cross-seed
spec:
  selector:
    matchLabels:
      app: cross-seed
  replicas: 1
  revisionHistoryLimit: 3
  template:
    metadata:
      labels:
        app: cross-seed
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - marcus-server
      containers:
        - name: cross-seed
          image: harbor.yanello.net/ghcr/cross-seed/cross-seed:7.0.0-22@sha256:876f39fcf4e898624f084980c9542d8ceb03c38a2325a171ee3a8416480740c7
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsUser: 3000
            runAsGroup: 3000
          args: [daemon]
          resources:
            requests:
              memory: 500Mi
              cpu: 50m
            limits:
              memory: 1Gi
          ports:
            - name: http
              containerPort: 2468
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /data/media/torrents
              name: torrents
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: cross-seed-config
        - name: torrents
          hostPath:
            path: /data/media/torrents
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cross-seed
  name: cross-seed
spec:
  ports:
    - name: "http"
      port: 2468
      targetPort: http
  selector:
    app: cross-seed
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: cross-seed-app
  name: cross-seed-httproute
spec:
  parentRefs:
    - name: cilium-private-gateway
      namespace: cilium
      sectionName: https
  hostnames:
    - cross-seed.yanello.net
  rules:
    - backendRefs:
        - name: cross-seed
          namespace: qbittorrent
          port: 2468
