argocd/media-server/qbittorrent/manifests/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: qBittorrent
    gethomepage.dev/icon: qbittorrent
    gethomepage.dev/description: "qBittorrent is a free and open source torrent client for Windows, macOS and Linux."
    gethomepage.dev/pod-selector: app=qbittorrent
  labels:
    app.kubernetes.io/instance: qbittorrent-app
  name: qbittorrent-httproute
spec:
  parentRefs:
    - name: cilium-private-gateway
      namespace: cilium
      sectionName: https
  hostnames:
  - qbit.yanello.net
  rules:
  - backendRefs:
    - name: qbittorrent #ak-outpost-authentik-embedded-outpost
      namespace: qbittorrent #authentik
      port: 8080 #9000
