argocd/media-server/qbittorrent/manifests/netpol.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: qbittorrent
spec:
  endpointSelector:
    matchLabels:
      app: qbittorrent
  ingress:
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: radarr
            app: radarr
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: sonarr
            app: sonarr
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: qbittorrent
            app: cross-seed
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    - fromEntities:
        - world
      toPorts:
        - ports:
            - port: "51820"
              protocol: UDP
  egress:
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "51820"
              protocol: UDP
            - port: "443"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cross-seed
spec:
  endpointSelector:
    matchLabels:
      app: cross-seed
  ingress:
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "2468"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: qbittorrent
            app: qbittorrent
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: radarr
            app: radarr
      toPorts:
        - ports:
            - port: "7878"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: sonarr
            app: sonarr
      toPorts:
        - ports:
            - port: "8989"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: prowlarr
            app: prowlarr
      toPorts:
        - ports:
            - port: "9696"
              protocol: TCP
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
